--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,7 @@
-
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact| Cen Sun</title>
+    <title>Contact | Cen Sun</title>
      <link rel="stylesheet" href="styles.css">
      <style>
         body {
@@ -96,6 +95,10 @@
             position: fixed;
 
         }
+         @media(max-width: 648px) {
+              footer{
+                  position: relative;
+              }}
     </style>
 </head><body>
     <header>
@@ -133,7 +136,8 @@
             </ul>
         </section>
     </main>
-    <footer>
+    
+<footer>
         © 2024 Cen Sun - All Rights Reserved
     </footer>
 
