--- a/works/ideas/index.html
+++ b/works/ideas/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Works | Ideas</title>
+    <title>Ideas | Cen Sun's Website</title>
      <link rel="stylesheet" href="styles.css">
  <style>
         body {
@@ -126,24 +126,24 @@
     </nav>
     <main>
         <section id="ideas">
-            <h1>Ideas</h1>
-            <article>
-                <h2>Zongzi</h2>
-                <p>Date: 2024-06-10</p>
-                <p>Concept: At the time of Dragon Boat Festival, we think about Zongzi. Zongzi, a staple of Chinese cuisine, exemplifies cultural economics, driving festival-related commerce, and inspiring agri-business innovation for small-scale entrepreneurship.</p>
-                <a href="zongzi-econ.pdf" download="">Download Project Plan</a>
+            <h1>Ideas</h1><article>
+                <h2><a href="reflect-economics-learend.html">Reflections on the Economics of Life: What I learned from my economics class</a></h2>
+                <p>Date: 2024-06-24</p>
+                <p>Concept: At the time of year while I finished my study on AP Micro/Macroeconomics courses, I have a lot of reflections on what my teacher taught me during the class. This little essay is my current understanding about economics and how to think like an economist. </p>
+                
             </article>
+            
             <article>
                 <h2>AI-Based Personal Finance Advisor</h2>
                 <p>Date: 2024-06-05</p>
                 <p>Concept: Create an AI-powered personal finance advisor that helps users manage their finances, track spending, and make investment decisions...</p>
-                <a href="AI-Finance.pdf" download="">Download Project Plan</a>
             </article>
         </section>
     </main>
     <footer>
         © 2024 Cen Sun - All Rights Reserved
     </footer>
+
 
 
 </body></html>
