Update and rename reflect-economics-learend.html to reflect-economics-learned.html

--- a/works/ideas/reflect-economics-learned.html
+++ b/works/ideas/reflect-economics-learned.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cen Sun - Personal Webpage</title>
+    <title>Reflections on the Economics of Life: What I learned from Economics class | Cen Sun</title>
     <style>
         body {
             font-family: Arial, sans-serif;
