--- a/works/ideas/reflect-economics-learned.html
+++ b/works/ideas/reflect-economics-learned.html
@@ -158,12 +158,12 @@
             <b><font size="4.5">Posted on June 26, 2024</font></b>
     <div style="text-align: right;">
     <img src="https://webofcen.github.io/Assets/utility/pdf_icon.jpg" alt="pdf icon">
-    <a href="https://webofcen.github.io/Assets/Works/idea/Reflection.pdf" style="color: #333;" download="">Download PDF</a></div>
+    <a href="https://webofcen.github.io/Assets/Works/Reflection.pdf" style="color: #333;" download="">Download PDF</a></div>
             <hr>
         <br>
     <div style="text-align: center;">
        <audio controls="">
-    <source src="Leanred-from-econ.mp3" type="audio/mpeg">
+    <source src="https://webofcen.github.io/Assets/Works/leanred-from-econ.mp3" type="audio/mpeg">
     Your browser does not support audio element.
 </audio></div>
   
