--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             padding: 10px 0;
             bottom: 0;
             width: 100%;
-            position: fixed;
+            position: relative;
 
         }
          @media(max-width: 648px) {
