--- a/activity/index.html
+++ b/activity/index.html
@@ -132,17 +132,18 @@
         <section id="activity">
             <h1>My Activity</h1>
             <article>
-                <h2><a href="end-class-econ.html">Blog Post: End-class Celebration</a></h2>
+                <h2><a href="upenn-summer.html">Blog Post: UPenn Summer School</a></h2>
+                <p>Date: 2024-07-06 to 2024-07-27</p>
+                <p>I went to the summer school at Penn Carey Law school for experienceing new fields and meeting new friends</p>
+                <img src="source/pennlaw.jpg" alt="PennLaw Summer School">
+            </article><a href="upenn-summer.html">
+            </a><article><a href="upenn-summer.html">
+                </a><h2><a href="upenn-summer.html"></a><a href="end-class-econ.html">Blog Post: End-class Celebration</a></h2>
                 <p>Date: 2024-06-14</p>
                 <p>This week, we do a celebration for our up-going Economics Teachr Mr. Rush. By doing double-blind strategy, we made a big surprise to both sides, for giving thanks to the teacher :)</p>
                 <img src="endlassecon.jpg" alt="End-class Celebration">
             </article>
-            <article>
-                <h2>Blog Post: UPenn Summer School</h2>
-                <p>Date: 2024-07-06</p>
-                <p>I went to the summer school at Penn Carey Law school for experienceing new fields and meeting new friends</p>
-                <img src="pennlaw.jpg" alt="PennLaw Summer School">
-            </article>
+            
             <article>
                 <h2>Blog Post Title 3</h2>
                 <p>Date: N/A</p>
@@ -154,6 +155,7 @@
 <footer>
         © 2024 Cen Sun - All Rights Reserved
     </footer>
+
 
 
 </body></html>
